swagger api calls working
