# app/Http/Controllers/AuthController.php
@@ -32,6 +32,57 @@ class AuthController extends Controller
      * }
      * @group Auth
      */
+
+      /**
+     * @OA\Post(
+     ** path="/api/login",
+     *   tags={"Auth"},
+     *   summary="Login",
+     *   operationId="login",
+     *
+     *   @OA\Parameter(
+     *      name="email",
+     *      in="query",
+     *      required=true,
+     *      @OA\Schema(
+     *           type="string"
+     *      )
+     *   ),
+     *   @OA\Parameter(
+     *      name="password",
+     *      in="query",
+     *      required=true,
+     *      @OA\Schema(
+     *          type="string"
+     *      )
+     *   ),
+     *   @OA\Response(
+     *      response=200,
+     *       description="Success",
+     *      @OA\MediaType(
+     *           mediaType="application/json",
+     *      )
+     *   ),
+     *   @OA\Response(
+     *      response=401,
+     *       description="Unauthenticated"
+     *   ),
+     *   @OA\Response(
+     *      response=400,
+     *      description="Bad Request"
+     *   ),
+     *   @OA\Response(
+     *      response=404,
+     *      description="not found"
+     *   ),
+     *      @OA\Response(
+     *          response=403,
+     *          description="Forbidden"
+     *      )
+     *)
+     **/
+
+
     public function login(LoginRequest $request)
     {
         $userdata = $request->validated();
@@ -89,6 +140,45 @@ class AuthController extends Controller
     /**
      *  @group Auth
      */
+
+   /**
+ * Logout
+ * @OA\Post (
+ *     path="/api/logout",
+ *     tags={"Auth"},
+ *     @OA\RequestBody(
+ *         @OA\MediaType(
+ *             mediaType="application/json",
+ *             @OA\Schema(  @OA\Property(),example={} )
+ *         )
+ *      ),
+ *      @OA\Response(
+ *          response=200,
+ *          description="Success",
+ *          @OA\JsonContent(
+ *              @OA\Property(property="meta", type="object",
+ *                  @OA\Property(property="code", type="number", example=200),
+ *                  @OA\Property(property="status", type="string", example="success"),
+ *                  @OA\Property(property="message", type="string", example="Successfully logged out"),
+ *              ),
+ *              @OA\Property(property="data", type="object", example={}),
+ *          )
+ *      ),
+ *      @OA\Response(
+ *          response=401,
+ *          description="Invalid token",
+ *          @OA\JsonContent(
+ *              @OA\Property(property="meta", type="object",
+ *                  @OA\Property(property="code", type="number", example=422),
+ *                  @OA\Property(property="status", type="string", example="error"),
+ *                  @OA\Property(property="message", type="string", example="Unauthenticated."),
+ *              ),
+ *              @OA\Property(property="data", type="object", example={}),
+ *          )
+ *      ),
+ * security={{"bearerAuth": {}},},
+ * )
+ */
 
     public function logout()
     {
